--- a/src/styles/Registrohabitacion.css
+++ b/src/styles/Registrohabitacion.css
@@ -12,7 +12,7 @@
 .titulo {
   text-align: center;
   font-size: 30px; /* Título más grande */
-  color: #3f51b5; /* Color del título */
+  color: #00000f; /* Color del título */
   margin-bottom: 30px; /* Mayor separación */
   font-weight: bold; /* Título en negrita */
   text-transform: uppercase; /* Texto en mayúsculas */
@@ -45,7 +45,7 @@ label {
 
 select, input[type="text"], textarea {
   padding: 12px; /* Mayor padding para mayor comodidad */
-  border: 1px solid #3f51b5; /* Color de borde */
+  border: 1px solid #000000; /* Color de borde */
   border-radius: 10px;
   font-size: 16px;
   transition: border-color 0.3s, box-shadow 0.3s; /* Transiciones suaves */
@@ -84,7 +84,7 @@ textarea {
 }
 
 .btn-registrar {
-  background-color: #4CAF50; /* Color de fondo verde */
+  background-color: #89ba89; /* Color de fondo verde */
   color: white;
 }
 
